--- a/detect_bias_amazon_sagemaker_clarify/C1_W2_Assignment.ipynb
+++ b/detect_bias_amazon_sagemaker_clarify/C1_W2_Assignment.ipynb
@@ -1473,7 +1473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {
     "tags": []
    },
@@ -1515,9 +1515,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 41,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "upload: ./C1_W2_Assignment.ipynb to s3://sagemaker-us-east-1-505802170089/C1_W2_Assignment_Learner.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "!aws s3 cp ./C1_W2_Assignment.ipynb s3://$bucket/C1_W2_Assignment_Learner.ipynb"
    ]
