--- a/sagemaker_blazing_text_built_in_algos/C1_W4_Assignment.ipynb
+++ b/sagemaker_blazing_text_built_in_algos/C1_W4_Assignment.ipynb
@@ -1837,9 +1837,9 @@
   ],
   "instance_type": "ml.t3.medium",
   "kernelspec": {
-   "display_name": "Python 3 (Data Science)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "python3__SAGEMAKER_INTERNAL__arn:aws:sagemaker:us-east-1:081325390199:image/datascience-1.0"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1851,7 +1851,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
+   "version": "3.9.4"
   }
  },
  "nbformat": 4,
